fixed spacing & lines

--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-top: 100px;
+
   // height: 150px;
 }
 .footer-wrapper {
@@ -43,7 +43,6 @@
   }
 }
 
-
 // mobile only
 @media (max-width: 480px) {
   .footer {
@@ -54,8 +53,11 @@
     padding: 10px 10px 0 10px;
   }
   .footer-child {
-    padding: 30px 0;
+    padding: 15px 0;
   }
+  .footer-copyright {
+  font-size: 5px;
+}
 }
 // tablet/desktop only
 // @media (min-width: 481px) {
